--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -16,6 +16,7 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 
+edgelet = { path = "../edgelet", optional = true }
 mqtt-broker = { path = "../mqtt-broker" }
 mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
 mqtt-generic = { path = "../mqtt-generic", optional = true }
@@ -26,5 +27,5 @@ serde_json = "1.0"
 
 [features]
 default = ["edgehub"]
-edgehub = ["mqtt-edgehub"]
+edgehub = ["mqtt-edgehub", "edgelet"]
 generic = ["mqtt-generic"]
