--- a/builds/checkin/dotnet.yaml
+++ b/builds/checkin/dotnet.yaml
@@ -5,6 +5,7 @@ pr:
       - master
       - release/*
       - iiot
+      - preview/iiot
 jobs:
 
 ################################################################################
