--- a/builds/ci/dotnet.yaml
+++ b/builds/ci/dotnet.yaml
@@ -5,6 +5,7 @@ trigger:
       - master
       - release/*
       - iiot
+      - preview/iiot
 pr: none
 variables:
   build.configuration: Release
