--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -10,6 +10,8 @@ resources:
       branches:
       - master
       - release/*
+      - iiot
+      - preview/iiot
   - pipeline: packages
     source: 'Azure-IoT-Edge-Core Edgelet Packages'
     branch: master
