--- a/builds/checkin/watchdog.yaml
+++ b/builds/checkin/watchdog.yaml
@@ -3,6 +3,7 @@ pr:
   branches:
     include:
       - iiot
+      - preview/iiot
 jobs:
 
   ################################################################################
