--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -23,7 +23,7 @@ regex = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp"] }
+tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp", "dns"] }
 tokio-io-timeout = "0.4"
 tokio-openssl = "0.4"
 tokio-util = { version = "0.2", features = ["codec"] }
@@ -42,7 +42,7 @@ matches = "0.1"
 proptest = "0.9"
 tempfile = "3"
 test-case = "1.0"
-tokio = { version = "0.2", features = ["dns", "macros"] }
+tokio = { version = "0.2", features = ["dns", "macros", "io-util"] }
 tracing-subscriber = "0.1"
 
 mqtt-broker-tests-util = { path = "../mqtt-broker-tests-util" }
