--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -6,19 +6,58 @@ resources:
   - pipeline: images
     source: 'Azure-IoT-Edge-Core Build Images'
     branch: master
-    # trigger:
-    #   branches:
-    #   - master
-    #   - release/*
+    trigger:
+      branches:
+      - master
+      - release/*
   - pipeline: packages
     source: 'Azure-IoT-Edge-Core Edgelet Packages'
     branch: master
-    # trigger:
-    #   branches:
-    #   - master
-    #   - release/*
+    trigger:
+      branches:
+      - master
+      - release/*
 
 jobs:
+
+################################################################################	
+  - job: linux_arm32v7
+################################################################################	
+    displayName: Linux arm32v7
+
+    pool:
+      name: $(pool.name)
+      demands: rpi3-e2e-tests
+
+    variables:
+      os: linux
+      arch: arm32v7
+      artifactName: iotedged-debian9-arm32v7
+
+    timeoutInMinutes: 120
+
+    steps:
+    - template: templates/e2e-clean-directory.yaml
+    - template: templates/e2e-setup.yaml
+    - template: templates/e2e-clear-docker-cached-images.yaml
+    - template: templates/e2e-run.yaml
+
+################################################################################	
+  - job: linux_amd64
+################################################################################	
+    displayName: Linux amd64
+
+    pool:
+      vmImage: ubuntu-16.04
+
+    variables:
+      os: linux
+      arch: amd64
+      artifactName: iotedged-ubuntu16.04-amd64
+
+    steps:
+    - template: templates/e2e-setup.yaml
+    - template: templates/e2e-run.yaml
 
 ################################################################################	
   - job: windows_amd64
@@ -26,9 +65,7 @@ jobs:
     displayName: Windows amd64
 
     pool:
-      name: $(pool.name)
-      demands:
-        - damon-win -equals 1
+      vmImage: windows-2019
 
     variables:
       os: windows
@@ -58,3 +95,26 @@ jobs:
       displayName: Prefer IPv4
 
     - template: templates/e2e-run.yaml
+
+################################################################################	
+  - job: centos7_amd64
+################################################################################	
+    displayName: CentOs7 amd64
+
+    pool:
+      name: $(pool.name)
+      demands:
+        - Agent.OS -equals Linux
+        - Agent.OSArchitecture -equals X64
+        - run-new-e2e-tests -equals true
+
+    variables:
+      os: linux
+      arch: amd64
+      artifactName: iotedged-centos7-amd64
+
+    steps:
+    - template: templates/e2e-clean-directory.yaml
+    - template: templates/e2e-setup.yaml
+    - template: templates/e2e-clear-docker-cached-images.yaml
+    - template: templates/e2e-run.yaml 
