--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -120,6 +120,7 @@ steps:
     if ($IsWindows)
     {
       $context['installerPath'] = Convert-Path '$(Build.SourcesDirectory)/scripts/windows/setup'
+      $context['testTimeoutMinutes'] = 10
     }
 
     if ('$(arch)' -eq 'arm32v7')
