--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -16,7 +16,7 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 
-edgelet = { path = "../edgelet", optional = true }
+edgelet-client = { path = "../edgelet-client", optional = true }
 mqtt-broker = { path = "../mqtt-broker" }
 mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
 mqtt-generic = { path = "../mqtt-generic", optional = true }
@@ -27,5 +27,5 @@ serde_json = "1.0"
 
 [features]
 default = ["edgehub"]
-edgehub = ["mqtt-edgehub", "edgelet"]
+edgehub = ["mqtt-edgehub", "edgelet-client"]
 generic = ["mqtt-generic"]
