--- a/edgelet/edgelet-http-mgmt/Cargo.toml
+++ b/edgelet/edgelet-http-mgmt/Cargo.toml
@@ -21,6 +21,7 @@ edgelet-http = { path = "../edgelet-http" }
 edgelet-iothub = { path = "../edgelet-iothub" }
 management = { path = "../management" }
 provisioning = { path = "../provisioning" }
+secret-store = { path = "../secret-store" }
 
 [dev-dependencies]
 chrono = { version = "0.4", features = ["serde"] }
