--- a/edgelet/support-bundle/Cargo.toml
+++ b/edgelet/support-bundle/Cargo.toml
@@ -15,4 +15,5 @@ edgelet-core = { path = "../edgelet-core" }
 
 [dev-dependencies]
 edgelet-test-utils = { path = "../edgelet-test-utils" }
+regex = "0.2"
 tempfile = "3.1.0"
