Support bundle upload (#3356)
* Rename logs => module logs

* make handler classes

* include new dm

* chkpnt

* start able to write to in memory

* fix types

* output to console

* fix flags

* start able to write to in memory

* fix types

* output to console

* fix flags

* re-enable tests

* import zip module and use display

* use --output - for stdout

* call support bundle

* parse params

* add new api version

* reuse http client

* flesh out request

* make logs uploader more generic

* fix merge issue

* bring in api changes

* fix version

* add get_result

* move support bundle logic to own file

* remove s

* collect bundle

* wrap read in body

* return support bundle size

* send full sb

* fix fileResponse

* read params

* parse_since

* pass hostname

* clippy

* re-enable first test

* add logs test back

* rename ILogsUPloader file to IRequestsUploader

* remove unused IDisposable

* get iothub hostname from edgeAgent

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/edgelet/api/managementVersion_2020_07_07.yaml
+++ b/edgelet/api/managementVersion_2020_07_07.yaml
@@ -457,6 +457,45 @@ paths:
           description: Error
           schema:
             $ref: '#/definitions/ErrorResponse'
+  
+  '/systeminfo/supportbundle':
+    get:
+      tags:
+        - SystemInformation
+      summary: Return zip of support bundle.
+      produces:
+        - application/zip
+      operationId: GetSupportBundle
+      parameters:
+        - $ref: '#/parameters/api-version'
+        - in: query
+          name: since
+          description: Duration to get logs from. Can be relative (1d, 10m, 1h30m etc.) or absolute (unix timestamp or rfc 3339)
+          required: false
+          type: string
+        - in: query
+          name: host
+          description: Path to the management host
+          required: false
+          type: string
+        - in: query
+          name: iothub_hostname
+          description: Hub to use when calling iotedge check
+          required: false
+          type: string
+        - in: query
+          name: edge_runtime_only
+          description: Exclude customer module logs
+          required: false
+          type: boolean
+          default: false
+      responses:
+        '200':
+          description: Ok
+        default:
+          description: Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
 
   '/device/reprovision':
     post:
