Run end-to-end tests on custom agent

--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -26,7 +26,9 @@ jobs:
     displayName: Windows amd64
 
     pool:
-      vmImage: windows-2019
+      name: $(pool.name)
+      demands:
+        - damon-win -equals 1
 
     variables:
       os: windows
