--- a/edgelet/iotedge/Cargo.toml
+++ b/edgelet/iotedge/Cargo.toml
@@ -16,6 +16,7 @@ clap = "2.31"
 failure = "0.1"
 futures = "0.1"
 hyper = "0.12"
+hyper-proxy = "0.5"
 lazy_static = "1"
 native-tls = "0.2"
 openssl = "0.10"
