use same build method as mqttd for edgehub container

--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -26,7 +26,9 @@ jobs:
         name: build
         displayName: Build ($(Build.Configuration)) dotnet artifacts
 
-      - template: templates/build-broker-watchdog.yaml
+      - template: templates/build-broker.yaml
+
+      - template: templates/build-watchdog.yaml
 
       - template: templates/consolidate-edgehub-artifacts.yaml
 
