--- a/builds/misc/images-mqtt.yaml
+++ b/builds/misc/images-mqtt.yaml
@@ -26,6 +26,12 @@ jobs:
           command: login
           containerRegistry: iotedge-edgebuilds-acr
 
+      - task: Bash@3
+        displayName: Build MQTT Broker - amd64
+        inputs:
+          filePath: scripts/linux/cross-platform-rust-build.sh
+          arguments: --os ubuntu18.04 --arch amd64 --build-path mqtt/mqttd
+
       - task: Docker@2
         displayName: Build amd64 image
         inputs:
@@ -61,6 +67,12 @@ jobs:
         inputs:
           command: login
           containerRegistry: iotedge-edgebuilds-acr
+
+      - task: Bash@3
+        displayName: Build MQTT Broker - arm32
+        inputs:
+          filePath: scripts/linux/cross-platform-rust-build.sh
+          arguments: --os ubuntu18.04 --arch arm32v7 --build-path mqtt/mqttd
 
       - task: Docker@2
         displayName: Build arm32v7 image
