--- a/mqtt/docker/linux/arm32v7/Dockerfile
+++ b/mqtt/docker/linux/arm32v7/Dockerfile
@@ -1,24 +1,3 @@
-# -*- mode: dockerfile -*-
-
-# You can override this `--build-arg BASE_IMAGE=...` to use different
-# version of Rust or OpenSSL.
-ARG BASE_IMAGE=messense/rust-musl-cross:armv7-musleabihf
-
-# Our first FROM statement declares the build environment.
-FROM ${BASE_IMAGE} AS builder
-
-# Add our source code.
-ADD . ./
-
-# Force add tartget platform in case 
-# rust-toolchain file contains version other than 'stable'.
-# Otherwise it's noop.
-RUN rustup target add armv7-unknown-linux-musleabihf
-
-# Build our application.
-RUN cargo build --release --manifest-path mqttd/Cargo.toml --no-default-features --features "generic" \ 
-    && musl-strip /home/rust/src/target/armv7-unknown-linux-musleabihf/release/mqttd
-
 FROM busybox
 
 # Add an unprivileged user account for running mqttd	
@@ -29,9 +8,7 @@ RUN adduser -Du ${MQTTDUSER_ID} mqttduser
 EXPOSE 1883/tcp
 EXPOSE 8883/tcp
 
-COPY --from=builder \
-    /home/rust/src/target/armv7-unknown-linux-musleabihf/release/mqttd \
-    /usr/local/bin/
+ADD ./mqttd/target/armv7-unknown-linux-gnueabihf/release/mqttd /usr/local/bin/mqttd
 
 USER mqttduser
 
