--- a/edge-modules/iotedge-diagnostics-dotnet/IotedgeDiagnosticsDotnet.csproj
+++ b/edge-modules/iotedge-diagnostics-dotnet/IotedgeDiagnosticsDotnet.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="ProxyLib" Version="1.0.1" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
