fix arm64 dockerfile

--- a/edge-hub/docker/linux/arm64v8/Dockerfile
+++ b/edge-hub/docker/linux/arm64v8/Dockerfile
@@ -2,8 +2,8 @@ ARG base_tag=1.0.6.0-linux-arm64v8
 FROM azureiotedge/azureiotedge-hub-base:${base_tag}
 
 ADD ./watchdog/target/aarch64-unknown-linux-gnu/release/watchdog /usr/local/bin/watchdog
-ADD ./mqttd/target/aarch64-unknown-linux-gnu/release/mqttd /usr/local/bin/mqttd
-ADD ./mqttd/broker.json /app/mqttd/broker.json
+ADD ./mqtt/target/aarch64-unknown-linux-gnu/release/mqttd /usr/local/bin/mqttd
+ADD ./mqtt/broker.json /app/mqttd/broker.json
 
 WORKDIR /app
 
