--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -26,9 +26,7 @@ jobs:
     displayName: Windows amd64
 
     pool:
-      name: $(pool.name)
-      demands:
-        - damon-win -equals 1
+      vmImage: windows-2019
 
     variables:
       os: windows
