Revert "Fix file name"
This reverts commit 7acbb7488d6283d3918503522efb7fad674ef1f0.

--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -61,7 +61,7 @@ jobs:
         $daemon = @{
           dns = @( "1.1.1.1" )
         }
-        $daemon | ConvertTo-Json | Out-File -Encoding Ascii "$configDir/daemon.json"
+        $daemon | ConvertTo-Json | Out-File -Encoding Ascii "$configDir/config.yaml"
       displayName: Set up moby DNS
 
     - template: templates/e2e-run.yaml
