Revert "Fix PowerShell array syntax"
This reverts commit 217d2f856e458a0534f669482757a378faaa5028.

--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -59,7 +59,7 @@ jobs:
         $configDir = 'C:/ProgramData/iotedge-moby/config'
         New-Item $configDir -ItemType 'directory' -Force | Out-Null
         $daemon = @{
-          dns = @( "1.1.1.1" )
+          dns = new[] { "1.1.1.1" }
         }
         $daemon | ConvertTo-Json | Out-File -Encoding Ascii "$configDir/config.yaml"
       displayName: Set up moby DNS
