--- a/edgelet/workload/Cargo.toml
+++ b/edgelet/workload/Cargo.toml
@@ -1,18 +1,17 @@
 [package]
 name = "workload"
-version = "0.1.0"
-authors = ["Azure IoT Edge Devs"]
-publish = false
-edition = "2018"
+version = "1.0.0"
+authors = ["Swagger Codegen team and contributors"]
 
 [dependencies]
-base64 = "0.9"
-failure = "0.1"
-futures = "0.1"
-hyper = "0.12"
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0"
 serde_yaml = "0.7"
-typed-headers = "0.1"
+serde_json = "1.0"
+base64 = "0.7"
+futures = "0.1"
+hyper = "0.12"
 url = "1.5"
+
+[dev-dependencies]
+tokio-core = "*"
