--- a/builds/misc/templates/move-rust-artifacts.yaml
+++ b/builds/misc/templates/move-rust-artifacts.yaml
@@ -23,13 +23,13 @@ parameters:
 steps:
   - bash: |
       mv  ${{ parameters['artifact.folder.path'] }}/${{ parameters['target.amd64'] }}/${{ parameters['artifact.name'] }} ${{ parameters['destination.folder.path'] }}/${{ parameters['target.amd64'] }}/release/${{ parameters['artifact.name'] }}
-    condition: and(eq('${{ should.publish.amd64 }}', 'true'), succeeded())
+    condition: and(eq('${{ parameters['should.publish.amd64'] }}', 'true'), succeeded())
     displayName: Move amd64 rust artifacts
   - bash: |
       mv  ${{ parameters['artifact.folder.path'] }}/${{ parameters['target.arm32v7'] }}/${{ parameters['artifact.name'] }} ${{ parameters['destination.folder.path'] }}/${{ parameters['target.arm32v7'] }}/release/${{ parameters['artifact.name'] }}
-    condition: and(eq('${{ should.publish.arm32v7 }}', 'true'), succeeded())
+    condition: and(eq('${{ parameters['should.publish.arm32v7'] }}', 'true'), succeeded())
     displayName: Move arm32v7 rust artifacts
   - bash: |
       mv  ${{ parameters['artifact.folder.path'] }}/${{ parameters['target.arm64v8'] }}/${{ parameters['artifact.name'] }} ${{ parameters['destination.folder.path'] }}/${{ parameters['target.arm64v8'] }}/release/${{ parameters['artifact.name'] }}
-    condition: and(eq('${{ should.publish.arm64v8 }}', 'true'), succeeded())
+    condition: and(eq('${{ parameters['should.publish.arm64v8'] }}', 'true'), succeeded())
     displayName: Move arm64v8 rust artifacts
