--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -7,31 +7,31 @@ trigger:
 pr: none
 
 jobs:
-################################################################################
+  ################################################################################
   - job: linux_dotnet_projects
-################################################################################
+    ################################################################################
     displayName: LinuxDotnet
     pool:
-      vmImage: 'ubuntu-16.04'
+      vmImage: "ubuntu-16.04"
     steps:
       - template: ../templates/install-dotnet2.yaml
       - template: ../templates/install-dotnet3.yaml
 
-      - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
-        displayName: 'Docker Login'
+      - bash: "docker login $(registry.address) --username $(registry.user) --password $(registry.password)"
+        displayName: "Docker Login"
 
       - script: scripts/linux/buildBranch.sh -c $(Build.Configuration) --no-rocksdb-bin
         name: build
         displayName: Build ($(Build.Configuration))
 
       - script: scripts/linux/createArtifactInfo.sh --output-folder '$(Build.BinariesDirectory)/publish' --build-number $(Build.BuildNumber)
-        displayName: 'Create Artifact Info File'
+        displayName: "Create Artifact Info File"
 
       - task: PublishBuildArtifacts@1
-        displayName: 'Publish Artifacts'
+        displayName: "Publish Artifacts"
         inputs:
-          PathtoPublish: '$(Build.BinariesDirectory)/publish'
-          ArtifactName: 'core-linux'
+          PathtoPublish: "$(Build.BinariesDirectory)/publish"
+          ArtifactName: "core-linux"
 
       # Edge Agent
       - template: templates/image-linux.yaml
@@ -53,6 +53,13 @@ jobs:
           name: Temperature Sensor
           imageName: azureiotedge-simulated-temperature-sensor
           project: SimulatedTemperatureSensor
+
+      # Dotnet Diagnostics Module
+      - template: templates/image-linux.yaml
+        parameters:
+          name: Diagnostics
+          imageName: azureiotedge-diagnostics
+          project: IotedgeDiagnosticsDotnet
 
       # Temperature Filter
       - template: templates/image-linux.yaml
@@ -103,96 +110,96 @@ jobs:
           imageName: azureiotedge-metrics-validator
           project: MetricsValidator
 
-     # Module Restarter
+      # Module Restarter
       - template: templates/image-linux.yaml
         parameters:
           name: Module Restarter
           imageName: azureiotedge-module-restarter
           project: ModuleRestarter
 
-     # Twin Tester
+      # Twin Tester
       - template: templates/image-linux.yaml
         parameters:
           name: TwinTester
           imageName: azureiotedge-twin-tester
           project: TwinTester
 
-     # Relayer
+      # Relayer
       - template: templates/image-linux.yaml
         parameters:
           name: Relayer
           imageName: azureiotedge-relayer
           project: Relayer
-          
-    # Network Controller
+
+      # Network Controller
       - template: templates/image-linux.yaml
         parameters:
           name: Network Controller
           imageName: azureiotedge-network-controller
           project: NetworkController
 
-     # TestResultCoordinator
+      # TestResultCoordinator
       - template: templates/image-linux.yaml
         parameters:
           name: TestResultCoordinator
           imageName: azureiotedge-test-result-coordinator
           project: TestResultCoordinator
 
-     # Metrics Collector
+      # Metrics Collector
       - template: templates/image-linux.yaml
         parameters:
           name: Metrics Collector
           imageName: azureiotedge-metrics-collector
           project: MetricsCollector
 
-     # Deployment Tester
+      # Deployment Tester
       - template: templates/image-linux.yaml
         parameters:
           name: DeploymentTester
           imageName: azureiotedge-deployment-tester
           project: DeploymentTester
 
-     # EdgeHub Restart Tester
+      # EdgeHub Restart Tester
       - template: templates/image-linux.yaml
         parameters:
           name: EdgeHubRestartTester
           imageName: azureiotedge-edgehub-restart-tester
           project: EdgeHubRestartTester
 
-     # Cloud To Device Message Tester
+      # Cloud To Device Message Tester
       - template: templates/image-linux.yaml
         parameters:
           name: Cloud To Device Message Tester
           imageName: azureiotedge-c2dmessage-tester
           project: CloudToDeviceMessageTester
 
-################################################################################
-# linux - Rust amd64
-################################################################################
+  ################################################################################
+  # linux - Rust amd64
+  ################################################################################
   - template: templates/image-linux-rust-jobs.yaml
     parameters:
       archName: amd64
       targetArch: x86_64
 
-################################################################################
-# linux - Rust arm32
-################################################################################
+  ################################################################################
+  # linux - Rust arm32
+  ################################################################################
   - template: templates/image-linux-rust-jobs.yaml
     parameters:
       archName: arm32
       targetArch: armv7l
 
-################################################################################
-# linux - Rust arm64
-################################################################################
+  ################################################################################
+  # linux - Rust arm64
+  ################################################################################
   - template: templates/image-linux-rust-jobs.yaml
     parameters:
       archName: arm64
       targetArch: aarch64
 
-################################################################################
+  ################################################################################
   - job: windows
-################################################################################
+    ################################################################################
     displayName: Windows
     timeoutInMinutes: 90
     pool:
@@ -213,24 +220,24 @@ jobs:
         name: build
         displayName: Build ($(Build.Configuration))
 
-      - powershell: edgelet/build/windows/build-diagnostics.ps1 -BuildConfiguration $(Build.Configuration)
-        displayName: Build iotedge-diagnostics
+      # - powershell: edgelet/build/windows/build-diagnostics.ps1 -BuildConfiguration $(Build.Configuration)
+      #   displayName: Build iotedge-diagnostics
 
       - powershell: scripts/windows/build/Create-ArtifactInfo.ps1 -outputFolder '$(Build.BinariesDirectory)/publish' -buildNumber $(Build.BuildNumber)
-        displayName: 'Create Artifact Info File'
+        displayName: "Create Artifact Info File"
 
       - task: PublishBuildArtifacts@1
-        displayName: 'Publish Artifacts'
+        displayName: "Publish Artifacts"
         inputs:
-          PathtoPublish: '$(Build.BinariesDirectory)/publish'
-          ArtifactName: 'core-windows'
+          PathtoPublish: "$(Build.BinariesDirectory)/publish"
+          ArtifactName: "core-windows"
 
       # azureiotedge-diagnostics
       - template: templates/image-windows.yaml
         parameters:
           name: azureiotedge-diagnostics
           imageName: azureiotedge-diagnostics
-          project: azureiotedge-diagnostics
+          project: IotedgeDiagnosticsDotnet
 
       # Edge Agent
       - template: templates/image-windows.yaml
@@ -273,7 +280,7 @@ jobs:
           name: Test Analyzer
           imageName: azureiotedge-analyzer
           project: TestAnalyzer
-          
+
       # Functions Sample
       - template: templates/image-windows.yaml
         parameters:
@@ -294,7 +301,7 @@ jobs:
           name: Direct Method Receiver
           imageName: azureiotedge-direct-method-receiver
           project: DirectMethodReceiver
-          
+
       # Metrics Validator
       - template: templates/image-windows.yaml
         parameters:
@@ -302,56 +309,56 @@ jobs:
           imageName: azureiotedge-metrics-validator
           project: MetricsValidator
 
-     # Module Restarter
+      # Module Restarter
       - template: templates/image-windows.yaml
         parameters:
           name: Module Restarter
           imageName: azureiotedge-module-restarter
           project: ModuleRestarter
 
-     # Twin Tester
+      # Twin Tester
       - template: templates/image-windows.yaml
         parameters:
           name: Twin Tester
           imageName: azureiotedge-twin-tester
           project: TwinTester
 
-     # Relayer
+      # Relayer
       - template: templates/image-windows.yaml
         parameters:
           name: Relayer
           imageName: azureiotedge-relayer
           project: Relayer
 
-     # Metrics Collector
+      # Metrics Collector
       - template: templates/image-windows.yaml
         parameters:
           name: Metrics Collector
           imageName: azureiotedge-metrics-collector
           project: MetricsCollector
 
-     # TestResultCoordinator
+      # TestResultCoordinator
       - template: templates/image-windows.yaml
         parameters:
           name: TestResultCoordinator
           imageName: azureiotedge-test-result-coordinator
           project: TestResultCoordinator
 
-     # Deployment Tester
+      # Deployment Tester
       - template: templates/image-windows.yaml
         parameters:
           name: Deployment Tester
           imageName: azureiotedge-deployment-tester
           project: DeploymentTester
 
-     # EdgeHub Restart Tester
+      # EdgeHub Restart Tester
       - template: templates/image-windows.yaml
         parameters:
           name: EdgeHubRestartTester
           imageName: azureiotedge-edgehub-restart-tester
           project: EdgeHubRestartTester
 
-     # Cloud To Device Message Tester
+      # Cloud To Device Message Tester
       - template: templates/image-windows.yaml
         parameters:
           name: Cloud To Device Message Tester
@@ -361,12 +368,12 @@ jobs:
       - powershell: docker system prune -a -f
         displayName: Clean Machine
 
-################################################################################
+  ################################################################################
   - job: manifest
-################################################################################
+    ################################################################################
     displayName: Manifest
     pool:
-      vmImage: 'ubuntu-16.04'
+      vmImage: "ubuntu-16.04"
     dependsOn:
       - linux_dotnet_projects
       - linux_rust_amd64
@@ -376,15 +383,15 @@ jobs:
     variables:
       tags: "['latest']"
     steps:
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-agent/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
-      displayName: 'Publish Edge Agent Manifest'
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-hub/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
-      displayName: 'Publish Edge Hub Manifest'
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-modules/SimulatedTemperatureSensor/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
-      displayName: 'Publish Temperature Sensor Manifest'
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedged/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
-      displayName: 'Publish azureiotedge-iotedged Manifest'
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedge-diagnostics/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
-      displayName: 'Publish azureiotedge-diagnostics Manifest'
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedge-proxy/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
-      displayName: 'Publish azureiotedge-proxy Manifest'
+      - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-agent/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+        displayName: "Publish Edge Agent Manifest"
+      - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-hub/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+        displayName: "Publish Edge Hub Manifest"
+      - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-modules/SimulatedTemperatureSensor/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+        displayName: "Publish Temperature Sensor Manifest"
+      - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedged/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+        displayName: "Publish azureiotedge-iotedged Manifest"
+      - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-modules/iotedge-diagnostics-dotnet/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+        displayName: "Publish azureiotedge-diagnostics Manifest"
+      - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedge-proxy/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+        displayName: "Publish azureiotedge-proxy Manifest"
