--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -21,38 +21,55 @@ resources:
 jobs:
 
 ################################################################################	
-  - job: windows_amd64
+  - job: linux_amd64
 ################################################################################	
-    displayName: Windows amd64
+    displayName: Linux amd64
 
     pool:
-      vmImage: windows-2019
+      vmImage: ubuntu-16.04
 
     variables:
-      os: windows
+      os: linux
       arch: amd64
-      artifactName: iotedged-windows
+      artifactName: iotedged-ubuntu16.04-amd64
 
     steps:
     - template: templates/e2e-setup.yaml
-
-    - pwsh: |
-        $certBytes = [system.Text.Encoding]::UTF8.GetBytes($env:PACKAGE_SIGNING_CERT)
-        $cert = [System.Security.Cryptography.X509Certificates.X509Certificate]::new($certBytes)
-        $store = New-Object System.Security.Cryptography.X509Certificates.X509Store `
-          -ArgumentList 'Root', 'LocalMachine'
-        $store.Open('ReadWrite')
-        $store.Add($cert)
-      displayName: Install CAB signing root cert
-      env:
-        PACKAGE_SIGNING_CERT: $(TestIotedgedPackageRootSigningCert)
-
-    - pwsh: |
-        Write-Output '>>> BEFORE:'
-        netsh interface ipv6 show prefixpolicies
-        netsh interface ipv6 set prefixpolicy ::ffff:0:0/96 45 4
-        Write-Output '>>> AFTER:'
-        netsh interface ipv6 show prefixpolicies
-      displayName: Prefer IPv4
-
     - template: templates/e2e-run.yaml
+
+# ################################################################################	
+#   - job: windows_amd64
+# ################################################################################	
+#     displayName: Windows amd64
+
+#     pool:
+#       vmImage: windows-2019
+
+#     variables:
+#       os: windows
+#       arch: amd64
+#       artifactName: iotedged-windows
+
+#     steps:
+#     - template: templates/e2e-setup.yaml
+
+#     - pwsh: |
+#         $certBytes = [system.Text.Encoding]::UTF8.GetBytes($env:PACKAGE_SIGNING_CERT)
+#         $cert = [System.Security.Cryptography.X509Certificates.X509Certificate]::new($certBytes)
+#         $store = New-Object System.Security.Cryptography.X509Certificates.X509Store `
+#           -ArgumentList 'Root', 'LocalMachine'
+#         $store.Open('ReadWrite')
+#         $store.Add($cert)
+#       displayName: Install CAB signing root cert
+#       env:
+#         PACKAGE_SIGNING_CERT: $(TestIotedgedPackageRootSigningCert)
+
+#     - pwsh: |
+#         Write-Output '>>> BEFORE:'
+#         netsh interface ipv6 show prefixpolicies
+#         netsh interface ipv6 set prefixpolicy ::ffff:0:0/96 45 4
+#         Write-Output '>>> AFTER:'
+#         netsh interface ipv6 show prefixpolicies
+#       displayName: Prefer IPv4
+
+#     - template: templates/e2e-run.yaml
