--- a/builds/e2e/templates/e2e-run.yaml
+++ b/builds/e2e/templates/e2e-run.yaml
@@ -22,7 +22,7 @@ steps:
       }
       else
       {
-        sudo --preserve-env dotnet vstest $testFile --logger:trx --filter ValidateMetrics
+        sudo --preserve-env dotnet vstest $testFile --logger:trx --Tests:ValidateMetrics
       }
     }
   displayName: Run tests
