fix dockerfile and add to thirdpartynotices

--- a/edge-modules/iotedge-diagnostics-dotnet/docker/windows/arm32v7/Dockerfile
+++ b/edge-modules/iotedge-diagnostics-dotnet/docker/windows/arm32v7/Dockerfile
@@ -8,4 +8,4 @@ WORKDIR /app
 
 COPY $EXE_DIR/ ./
 
-CMD ["dotnet", "DiagnosticsModule.dll"]
+CMD ["echo", "Module is intended to be used with docker run command"]
