--- a/edge-modules/iotedge-diagnostics-dotnet/docker/linux/amd64/Dockerfile
+++ b/edge-modules/iotedge-diagnostics-dotnet/docker/linux/amd64/Dockerfile
@@ -3,8 +3,6 @@ FROM mcr.microsoft.com/dotnet/core/runtime:${base_tag}
 
 ARG EXE_DIR=.
 
-ENV MODULE_NAME "DiagnosticsModule.dll"
-
 WORKDIR /app
 
 COPY $EXE_DIR/ ./
@@ -13,5 +11,4 @@ COPY $EXE_DIR/ ./
 RUN adduser -Ds /bin/sh moduleuser 
 USER moduleuser
 
-CMD echo "$(date --utc +"[%Y-%m-%d %H:%M:%S %:z]"): Starting Module" && \
-    exec /usr/bin/dotnet DiagnosticsModule.dll
+CMD echo "$(date --utc +"[%Y-%m-%d %H:%M:%S %:z]"): Module is intended to be used with docker run command"
