--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -54,6 +54,13 @@ jobs:
           imageName: azureiotedge-simulated-temperature-sensor
           project: SimulatedTemperatureSensor
 
+      # Dotnet Diagnostics Module
+      - template: templates/image-linux.yaml
+        parameters:
+          name: Diagnostics
+          imageName: azureiotedge-diagnostics
+          project: IotedgeDiagnosticsDotnet
+
       # Temperature Filter
       - template: templates/image-linux.yaml
         parameters:
@@ -213,9 +220,6 @@ jobs:
         name: build
         displayName: Build ($(Build.Configuration))
 
-      - powershell: edgelet/build/windows/build-diagnostics.ps1 -BuildConfiguration $(Build.Configuration)
-        displayName: Build iotedge-diagnostics
-
       - powershell: scripts/windows/build/Create-ArtifactInfo.ps1 -outputFolder '$(Build.BinariesDirectory)/publish' -buildNumber $(Build.BuildNumber)
         displayName: 'Create Artifact Info File'
 
@@ -230,7 +234,7 @@ jobs:
         parameters:
           name: azureiotedge-diagnostics
           imageName: azureiotedge-diagnostics
-          project: azureiotedge-diagnostics
+          project: IotedgeDiagnosticsDotnet
 
       # Edge Agent
       - template: templates/image-windows.yaml
@@ -384,7 +388,7 @@ jobs:
       displayName: 'Publish Temperature Sensor Manifest'
     - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedged/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
       displayName: 'Publish azureiotedge-iotedged Manifest'
-    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedge-diagnostics/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
+    - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edge-modules/iotedge-diagnostics-dotnet/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
       displayName: 'Publish azureiotedge-diagnostics Manifest'
     - script: scripts/linux/buildManifest.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(Build.BuildNumber) -t $(System.DefaultWorkingDirectory)/edgelet/iotedge-proxy/docker/manifest.yaml.template -n microsoft --tags "$(tags)"
       displayName: 'Publish azureiotedge-proxy Manifest'
