--- a/edgelet/iotedge/Cargo.toml
+++ b/edgelet/iotedge/Cargo.toml
@@ -15,6 +15,8 @@ clap = "2.31"
 failure = "0.1"
 futures = "0.1"
 hyper = "0.12"
+hyper-proxy = "0.5.1"
+hyper-tls = "0.3"
 lazy_static = "1"
 native-tls = "0.2"
 openssl = "0.10"
@@ -25,6 +27,7 @@ serde_json = "1.0"
 tabwriter = "1.0"
 termcolor = "0.3"
 tokio = "0.1"
+typed-headers = "0.1.1"
 url = "1.7"
 zip = "0.5.3"
 
